# AutoQA

./: CMakeLists.txt  README.md  autogui.h  difflib.h  main.cpp  main.cpp.bak  screencut.cpp
