cmake_minimum_required(VERSION 3.14.0)
project(AutoQA VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 17)
find_package(NumCpp CONFIG REQUIRED)
find_package(OpenCV CONFIG REQUIRED)
find_package(Xlnt CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)
include_directories(D:/Lib/vcpkg/installed/x64-windows/includ ./onnxruntime/include)
add_executable(AutoQA main.cpp autogui.h autogui.cpp screencut.h screencut.cpp cnocr.h cnocr.cpp modle.cpp modle.h)
Set_Target_Properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
target_link_directories(AutoQA PUBLIC ./onnxruntime/lib)
target_link_libraries(AutoQA PRIVATE NumCpp::NumCpp ${OpenCV_LIBS} onnxruntime xlnt::xlnt imgui::imgui opengl32 d3d11 dxgi)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
